--- a/view/form/_resource.html
+++ b/view/form/_resource.html
@@ -6,10 +6,17 @@
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle">Done</span></div>
     </a>
     <form class="form-new-fields">
-        <div class="item" ng-repeat="resource in resourceField.resources" ng-click="filter.substate = resource">
-            <span ng-if="!resource.name">Resource {{$index + 1}}</span>
-            <span ng-if="resource.name">{{resource.name}}</span>
-        </div>    
+
+        <ion-list show-delete="data.showDelete">
+            <ion-item ng-repeat="resource in resourceField.resources" item="resource" class="item-remove-animate" ng-click="filter.substate = resource">
+                <span ng-if="!resource.name">Resource {{$index + 1}}</span>
+                <span ng-if="resource.name">{{resource.name}}</span>
+                <ion-option-button class="button-assertive" ng-click="deleteElement(resourceField.resources, resource)" ng-if="filter.edit">
+                    Delete
+                </ion-option-button>                
+            </ion-item>
+        </ion-list>
+
         <div class="item item-total" ng-if="resourceField.financial_option">
             Total
             <div>
@@ -24,11 +31,11 @@
         filter.actionBtnShow = true">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
-            <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle">Save</span></div>
+            <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="filter.edit">Save</span><span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="!filter.edit">Back</span></div>
     </a>
     <div class="formTitle">
         <div class="header-prj-text"> Design: {{formData.name}}</div>
-        <div class="blue-label">{{formData.id}}</div>
+        <div class="blue-label">{{formData.code}}</div>
     </div>
     <form class="form-container-bgd">
         <div style="position: relative; margin-bottom:5px">
@@ -39,7 +46,15 @@
             <div class="blue-dropArrow"></div>
             <div class="formContent">
                 <div class="calm-border" ng-if="resourceField.date_option">
-                    <label class="item item-input item-stacked-label calm-border" ion-datetime-picker date ng-model="filter.substate.current_day_obj">
+                    <label class="item item-input item-stacked-label calm-border" ion-datetime-picker date ng-model="filter.substate.current_day_obj" ng-if="filter.edit">
+                        <div class="inputLabel" style="padding-top: 10px;">
+                            <span class="all-name">Date</span>
+                        </div>
+                        <div style="padding-left: 15px;padding-right: 15px;border-top-left-radius: 0px;border-top-right-radius: 0px;overflow: hidden;height: 46px;padding-top: 12px;font-size: 14px;color: #000;background-color: #fff;">
+                            {{filter.substate.current_day_obj| date: "dd-MM-yyyy"}}
+                        </div>
+                    </label>
+                    <label class="item item-input item-stacked-label calm-border"  ng-model="filter.substate.current_day_obj" ng-if="!filter.edit">
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Date</span>
                         </div>
@@ -53,7 +68,7 @@
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Name</span>
                         </div>                                    
-                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.name" >
+                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.name" ng-disabled="!filter.edit">
                     </label>
                 </div>
                 <div class="calm-border">
@@ -61,7 +76,7 @@
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Product ref</span>
                         </div>
-                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.product_ref">
+                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.product_ref" ng-disabled="!filter.edit">
                     </label>
                 </div>                                                        
                 <div class="calm-border">
@@ -69,7 +84,7 @@
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Unit</span>
                         </div>
-                        <select class="form-select" ng-options="option as option.name for option in unit_list track by option.id" ng-model="filter.substate.unit_obj" ng-init="filter.substate.unit_obj = unit_list[0]"></select>
+                        <select class="form-select" ng-options="option as option.name for option in unit_list track by option.id" ng-model="filter.substate.unit_obj"  ng-disabled="!filter.edit"></select>
                     </label>
                 </div>
                 <div class="calm-border">
@@ -77,7 +92,7 @@
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Resource type</span>
                         </div>
-                        <select class="form-select" ng-options="option as option.name for option in resource_type_list track by option.id" ng-model="filter.substate.res_type_obj" ng-init="filter.substate.res_type_obj = resource_type_list[0]"></select>
+                        <select class="form-select" ng-options="option as option.name for option in resource_type_list track by option.id" ng-model="filter.substate.res_type_obj"  ng-disabled="!filter.edit"></select>
                     </label>
                 </div>
                 <div class="calm-border">
@@ -85,7 +100,7 @@
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Quantity</span>
                         </div>
-                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" type="number" ng-model="filter.substate.quantity">
+                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" type="number" ng-model="filter.substate.quantity" ng-disabled="!filter.edit">
                     </label>
                 </div>
                 <div class="calm-border" ng-if="resourceField.financial_option">
@@ -93,7 +108,7 @@
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Direct cost</span>
                         </div>
-                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" type="number" ng-model="filter.substate.direct_cost">
+                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" type="number" ng-model="filter.substate.direct_cost" ng-disabled="!filter.edit">
                     </label>
                 </div>
             </div>
