New design - Update 3

--- a/css/style.css
+++ b/css/style.css
@@ -724,3 +724,7 @@ ion-refresher{
         color: #fff;  
     }
 }
+.item-remove-padding .item-content{    
+    padding: 5px 10px; 
+    height:100%;
+}
