--- a/view/edit.html
+++ b/view/edit.html
@@ -16,10 +16,10 @@
                     <ion-list>
                         <div ng-repeat="fieldset in formData.field_group_instances track by $index" fs
                              data="fieldset" style="position: relative; margin-bottom:5px">
-<!--                            <a ng-click="repeatGroup(fieldset)" class="help"
-                               ng-show="fieldset.repeatable">
-                                <span class="icon ion-plus all-chevron"></span>
-                            </a>-->
+                            <!--                            <a ng-click="repeatGroup(fieldset)" class="help"
+                                                           ng-show="fieldset.repeatable">
+                                                            <span class="icon ion-plus all-chevron"></span>
+                                                        </a>-->
 
                             <ion-item  id="{{formData.id}}:{{$index}}"
                                        ng-click="toggleGroup(fieldset, formData.id + ':' + $index)"
@@ -64,9 +64,9 @@
                 <div class="form-container-bgd">
                     <div id="image-header" class="item-stable item fs all-field-header">
                         <span class="add-pic-text">Add pictures</span>
-                        <img class="add-pic-icon mr-0" src="img/new/cameraRoll.svg">
-                        <img class="add-pic-icon" src="img/new/takePicture.svg">
-                        <img class="add-pic-icon" src="img/new/gallery.svg">
+                        <img ng-click="addPicture()" class="add-pic-icon mr-0" src="img/new/cameraRoll.svg">
+                        <img ng-click="takePicture()" class="add-pic-icon" src="img/new/takePicture.svg">
+                        <img ng-click="goPicture()" class="add-pic-icon" src="img/new/gallery.svg">
                     </div>
                 </div>
                 <!--                <div class="form-container-bgd">
